# Parallel_Life

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  default_sequential.cpp  g_sequential.cpp  results.csv
.cache/clangd/index/: FuzzLife_openMP_parallel_for.cpp.B7E2EC2FFF208210.idx  FuzzLife_openMP_parallel_for_simd.cpp.E3CCF056BFF5D278.idx  FuzzLife_openMP_parallel_tasks.cpp.DD033AB906E0310C.idx  FuzzLife_sequential.cpp.79AC728CA44248F0.idx  antiLife_openMP_parallel_for.cpp.B08E1CB710C29BF7.idx  antiLife_openMP_parallel_for_simd.cpp.4400B01A9949104B.idx  antiLife_openMP_parallel_tasks.cpp.D0B772CB0CE18394.idx  antiLife_sequential.cpp.9DB9BE5BB0E60DC1.idx  customLife_common.hpp.163CC6EABA79ACEB.idx  customLife_openMP_parallel_for.cpp.64B98088D78859CF.idx  customLife_openMP_parallel_for_simd.cpp.FFF1A35C7954F21C.idx  customLife_openMP_parallel_tasks.cpp.0EB699699F69C7B2.idx  customLife_sequential.cpp.6CC984A794E645FF.idx  default_sequential.cpp.939BB48DFAABA824.idx  fuzzLife_openMP_parallel_for.cpp.A8997024A47F7EEB.idx  fuzzLife_openMP_parallel_for_simd.cpp.CCF48BAC33A7C37E.idx  fuzzLife_openMP_parallel_tasks.cpp.96ECE460A0842F2E.idx  fuzzLife_sequential.cpp.C1F34DC31051802C.idx  (+35 more)
antiLife/: antiLife_openMP_parallel_for.cpp  antiLife_openMP_parallel_for_simd.cpp  antiLife_openMP_parallel_tasks.cpp  antiLife_sequential.cpp
customLife/: customLife_common.hpp  customLife_openMP_parallel_for.cpp  customLife_openMP_parallel_for_simd.cpp  customLife_openMP_parallel_tasks.cpp  customLife_sequential.cpp
default/: default_openMP_parallel_for.cpp  default_openMP_parallel_for_simd.cpp  default_openMP_parallel_tasks.cpp
fuzzLife/: fuzzLife_openMP_parallel_for.cpp  fuzzLife_openMP_parallel_for_simd.cpp  fuzzLife_openMP_parallel_tasks.cpp  fuzzLife_sequential.cpp
gnarlLife/: gnarlLife_openMP_parallel_for.cpp  gnarlLife_openMP_parallel_for_simd.cpp  gnarlLife_openMP_parallel_tasks.cpp  gnarlLife_sequential.cpp
hTreeLife/: hTreeLifeLife_openMP_parallel_for.cpp  hTreeLifeLife_openMP_parallel_for_simd.cpp  hTreeLifeLife_openMP_parallel_tasks.cpp  hTreeLife_openMP_parallel_for.cpp  hTreeLife_openMP_parallel_for_simd.cpp  hTreeLife_openMP_parallel_tasks.cpp  hTreeLife_sequential.cpp
inverseLife/: inverseLife_openMP_parallel_for.cpp  inverseLife_openMP_parallel_for_simd.cpp  inverseLife_openMP_parallel_tasks.cpp  inverseLife_sequential.cpp
invertAmazeLife/: invertAmazeLife_openMP_parallel_for.cpp  invertAmazeLife_openMP_parallel_for_simd.cpp  invertAmazeLife_openMP_parallel_tasks.cpp  invertAmazeLife_sequential.cpp
neonBlobsLife/: neonBlosLife_openMP_parallel_for.cpp  neonBlosLife_openMP_parallel_for_simd.cpp  neonBlosLife_openMP_parallel_tasks.cpp  neonBlosLife_sequential.cpp
oilsLife/: oilsLife_openMP_parallel_for.cpp  oilsLife_openMP_parallel_for_simd.cpp  oilsLife_openMP_parallel_tasks.cpp  oilsLife_sequential.cpp
w&pLife/: w&pLife_openMP_parallel_for.cpp  w&pLife_openMP_parallel_for_simd.cpp  w&pLife_openMP_parallel_tasks.cpp  w&pLife_sequential.cpp
wnpLife/: wnpLife_openMP_parallel_for.cpp  wnpLife_openMP_parallel_for_simd.cpp  wnpLife_openMP_parallel_tasks.cpp  wnpLife_sequential.cpp
