cmake_minimum_required(VERSION 3.15.0)
project(Game VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(default_sequential default_sequential.cpp)

find_package(OpenMP)
if(OpenMP_CXX_FOUND)
	add_executable(default_openMP_parallel_for default_openMP_parallel_for.cpp)
	target_link_libraries(default_openMP_parallel_for PRIVATE OpenMP::OpenMP_CXX)
	add_executable(default_openMP_parallel_tasks default_openMP_parallel_tasks.cpp)
	target_link_libraries(default_openMP_parallel_tasks PRIVATE OpenMP::OpenMP_CXX)
else()
	message(STATUS "OpenMP not found; default_openMP target disabled")
endif()

